tests/neg/i6335.scala
case class Boo(i: Int) extends AnyVal
val b: AnyRef = Boo(1) // error
